--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,21 @@
 <resources>
     <string name="app_name">FreeChess</string>
     <string name="action_settings">Settings</string>
+    <string name="flip_black">Flip Black</string>
+    <string name="flip_black_summ">Flip the black pieces and clock.</string>
+    <string name="time_limit">Time limit</string>
+    <string-array
+        name="time_limit_entries">
+        <item>3 min</item>
+        <item>5 min</item>
+        <item>10 min</item>
+    </string-array>
+    <string-array
+        name="time_limit_values">
+        <item>3</item>
+        <item>5</item>
+        <item>10</item>
+    </string-array>
+    <string name="time_limit_default">5</string>
+
 </resources>
